# bookstore

./: Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: factories.py  urls.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/serializers/: __init__.py  category_serializer.py  product_serializer.py
product/viewsets/: product_viewset.py
shell/: pyproject.toml
shell/tests/: test_shell.py
