[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore Test API"
authors = ["CristianoMaciel <maciel.ds.br@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.1.2"
factory-boy = "^3.2.1"
Django = "^4.1"
django-rest-framework = "^0.1.0"
django-extensions = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
